# Sneeze

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  build-output.txt  vcpkg.json
.cursor/: session-dean_abramson.md
.github/: CI.md
cmake/: toolchain-aarch64-linux.cmake  toolchain-linux-clang.cmake
docs/: Home.md  STYLE.md
include/: Image.h  (+12 more)
src/: CMakeLists.txt  main.cpp
src/astro/: AstroService.cpp  AstroService.h  BodyData.cpp  BodyData.h  Celestial.cpp  Celestial.h  Epoch.h  Orbit.cpp  Orbit.h  RMCObject.cpp  RMCObject.h
src/cache/: Cache.md  CacheEntry.cpp  CacheEntry.h  Entry.cpp  Entry.h  File.cpp  File.h  FileCache.cpp  FileCache.h  FileCache.md  Manager.cpp  Manager.h  Meta.cpp  Meta.h  Store.h  Types.h
src/cmake/: Cmake.md  FindBoringSSL.cmake  FindFastgltf.cmake  FindGlslang.cmake  FindJwtCpp.cmake  FindNlohmannJson.cmake  FindSneezeCurl.cmake  FindSneezeFreeType.cmake  FindSneezeOpenXR.cmake  FindSneezeRmlUi.cmake  FindSpirvTools.cmake  FindWasmtime.cmake  cacert_data.cpp.in
src/compute/: ComputeDispatch.cpp  ComputeDispatch.h  ComputeDispatch.md  EmbeddedKernels.cpp  EmbeddedKernels.h
src/container/: Container.h
src/context/: Container.cpp  Context.cpp
src/context/console/: Block.cpp  Console.cpp  Console.h  Console.md  Entry.cpp  Stream.cpp
src/context/msf/: CertChain.cpp  Chain.cpp  MsfFile.cpp  MsfFile.md
src/context/network/: Asset.cpp  Cache.cpp  File.cpp  Network.cpp  Network.h  Network.md
src/context/scene/: AccessControl.cpp  AccessControl.h  Celestial.cpp  Celestial.h  Epoch.cpp  Epoch.h  Events.cpp  Events.h  Fabric.cpp  Fabric.h  MapObject.cpp  MapObject.h  Map_Object.cpp  Node.cpp  Node.h  Orbit.cpp  Orbit.h  Scene.cpp  Scene.md  SpatialIndex.cpp  SpatialIndex.h
src/context/scene/_tbd/: SpatialIndex.cpp  SpatialIndex.h
src/context/storage/: Silo.cpp  Storage.cpp  Storage.h  Storage.md  Unit.cpp
src/context/viewport/: AnariRenderer.cpp  AnariRenderer.h  GltfMesh.cpp  UVSphere.cpp  Viewport.cpp  Viewport.h  Viewport.md
src/core/: Core.md  Engine.cpp  Engine.h  Epoch.cpp  Epoch.h  Sneeze.cpp  Sneeze.h  Types.h  Worker.cpp  Worker.h  WorkerA.cpp  WorkerA.h  WorkerB.cpp  WorkerB.h  WorkerC.cpp  WorkerC.h  WorkerCompositor.cpp  WorkerCompositor.h  WorkerD.cpp  WorkerD.h  WorkerE.cpp  WorkerE.h  WorkerF.cpp  WorkerF.h  WorkerG.cpp  WorkerG.h  WorkerH.cpp  WorkerH.h
src/jws/: CertChain.cpp  CertChain.h  JwsBase.cpp  JwsBase.h  JwsFabric.cpp  JwsFabric.h  JwsService.cpp  JwsService.h
src/msf/: CertChain.cpp  CertChain.h  CertInfo.h  MsfFile.cpp  MsfFile.h  MsfFile.md
src/net/: HttpClient.cpp  HttpClient.h  HttpClient.md
src/network/: Asset.cpp  File.cpp  Meta.cpp  Network.cpp  Network.h  Network.md
src/persona/: Persona.cpp  Persona.h  Persona.md
src/platform/: Input.cpp  Input.h  Window.cpp  Window.h
src/renderer/: AnariRenderer.cpp  AnariRenderer.h  Renderer.h  Renderer.md  UVSphere.cpp  UVSphere.h
src/scene/: AccessControl.cpp  AccessControl.h  Events.cpp  Fabric.cpp  Fabric.h  MapObject.cpp  MapObject.h  Node.cpp  Node.h  Scene.cpp  Scene.h  Som.md  SpatialIndex.cpp  SpatialIndex.h
src/sneeze/: Context.cpp  Engine.cpp  Engine.h  Epoch.cpp  Pch.cpp  Pch.h  Sneeze.cpp  Sneeze.h  Sneeze.md  Thread.cpp  Types.h
src/sneeze/console/: Block.cpp  Block.h  Console.cpp  Console.h  Console.md  Entry.cpp  Stream.cpp  Stream.h
src/sneeze/control/: Agent.cpp  AgentC.cpp  AgentD.cpp  AgentE.cpp  AgentF.cpp  AgentG.cpp  AgentH.cpp  Compositor.cpp  Control.cpp  Control.h  Control.md  Fetch.cpp  IJob.cpp  Pool.cpp  Pool_Cycle.cpp  Pool_Queue.cpp  Scrub.cpp  Scrubber.cpp
src/sneeze/network/: Asset.cpp  Cache.cpp  Encoding.cpp  Encoding.h  Fetch.cpp  File.cpp  Network.cpp  Network.h  Network.md  Network_Asset.cpp  Network_Asset.h
src/sneeze/storage/: Asset.cpp  Silo.cpp  Storage.cpp  Storage.h  Storage.md  Storage_Asset.cpp  Storage_Asset.h  Unit.cpp
src/sneeze/worker/: Compositor.cpp  Controller.cpp  Scrubber.cpp  Worker.cpp  Worker.h  WorkerB.cpp  WorkerB.h  WorkerC.cpp  WorkerD.cpp  WorkerE.cpp  WorkerF.cpp  WorkerG.cpp  WorkerG.h  WorkerH.cpp  WorkerH.h
src/som/: AccessControl.cpp  AccessControl.h  Events.cpp  Events.h  Fabric.cpp  Fabric.h  MapObject.cpp  MapObject.h  Node.cpp  Node.h  Scene.h  Som.md  SpatialIndex.cpp  SpatialIndex.h  Types.h
src/spirv/: SpvPipeline.cpp  SpvPipeline.h  SpvPipeline.md
src/storage/: Asset.cpp  Storage.cpp  Storage.h  Storage.md  Unit.cpp
src/ui/: UiContext.cpp  UiContext.h  UiContext.md
src/view/: CameraOrbit.cpp  CameraOrbit.h  CameraOrbit.md
src/viewport/: Viewport.cpp  Viewport.h
src/viewport/container/: Container.h
src/viewport/msf/: CertChain.cpp  Msf.h  MsfFile.cpp  MsfFile.md
src/viewport/renderer/: AnariRenderer.cpp  AnariRenderer.h  Renderer.h  Renderer.md  UVSphere.cpp  UVSphere.h
src/viewport/scene/: AccessControl.cpp  AccessControl.h  Events.cpp  Events.h  Fabric.cpp  Fabric.h  MapObject.cpp  MapObject.h  Node.cpp  Node.h  Scene.cpp  Scene.h  Scene.md  Som.md  SpatialIndex.cpp  SpatialIndex.h  Types.h
src/viewport/view/: CameraOrbit.cpp  CameraOrbit.h  CameraOrbit.md
src/wasm/: HostFunctions.cpp  HostFunctions.h  ThreadPool.cpp  ThreadPool.h  Wasm.md  WasmInstance.cpp  WasmInstance.h  WasmRuntime.cpp  WasmRuntime.h  WasmStore.cpp  WasmStore.h
src/xr/: XrRuntime.cpp  XrRuntime.h  XrRuntime.md
tests/: CMakeLists.txt  CacheTest.cpp  ComputeTest.cpp  ConsoleTest.cpp  GenCerts.cpp  GltfTest.cpp  HttpClientTest.cpp  JwsTest.cpp  NetworkTest.cpp  SpvPipelineTest.cpp  StorageTest.cpp  TestRunner.cpp  UiContextTest.cpp  VoxTest.cpp  WasmRuntimeTest.cpp  XrRuntimeTest.cpp
tests/certs/: expired-cert.pem  expired-key.pem
tests/data/: hello-world.json  hello-world.msf  model.glb  solar-system.json  solar-system.msf
tests/wasm/map/src/: lib.rs
tests/wasm/solar_system/: Cargo.toml  gen_moons.py  gen_solar_system.py
tests/wasm/solar_system/src/: debris.rs  lib.rs  moons_earth.rs  moons_jupiter.rs  moons_mars.rs  moons_neptune.rs  moons_pluto.rs  moons_saturn.rs  moons_uranus.rs  planets.rs  star.rs
tools/SignMsf/: CMakeLists.txt  main.cpp
(+109 files in other folders)
